--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,10 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@chatwave/pages/auth": ["src/app/pages/auth/index.ts"],
+      "@chatwave/utils": ["src/app/utils/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
