--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
+    "primereact": "^10.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
