--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "primereact": "^10.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
     "tslib": "^2.3.0"
