--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
+    "google-libphonenumber": "^3.2.34",
     "primereact": "^10.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -18,6 +19,7 @@
     "react-icons": "^5.0.1",
     "react-international-phone": "^4.2.5",
     "react-router-dom": "^6.22.0",
+    "rxjs": "^7.8.1",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
