--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
     "google-libphonenumber": "^3.2.34",
@@ -18,6 +19,7 @@
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "react-international-phone": "^4.2.5",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "rxjs": "^7.8.1",
     "tslib": "^2.3.0"
