--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
     "google-libphonenumber": "^3.2.34",
+    "localforage": "^1.10.0",
     "primereact": "^10.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
